# sein-iot

./: .gitignore  BUILD.md  BUILD_COMPLETE.md  CHANGELOG.md  CMakeLists.txt  COMPLETE_BUILD_GUIDE.md  DEVELOPMENT.md  FIRMWARE_BUILD_SUMMARY.md  FIXES_APPLIED.md  INTEGRATION_GUIDE.md  INTELLISENSE_EXPLAINED.md  INTELLISENSE_FIX_STATUS.md  ISSUE_RESOLUTION_SUMMARY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  WINDOWS_SETUP.md  build.bat  build.sh  build_log.txt  build_output.txt  example_vibration_monitoring.c  idf_component.yml  partitions.csv  sdkconfig.defaults
components/fpga_accel/: CMakeLists.txt  fpga_dsp.c  fpga_dsp.h  fpga_manager.c  fpga_manager.h
components/protocol/: CMakeLists.txt  crc16.c  crc16.h  spi_protocol.c  spi_protocol.h
components/security/: CMakeLists.txt  atecc608a_wrapper.c  atecc608a_wrapper.h  crypto_ops.c  crypto_ops.h  secure_boot.c  secure_boot.h
components/sein_hal/: CMakeLists.txt  adc_hal.c  adc_hal.h  gpio_hal.c  gpio_hal.h  i2c_hal.c  i2c_hal.h  spi_hal.c  spi_hal.h
components/tinyml/: CMakeLists.txt  inference_engine.c  inference_engine.h
include/: config.h  sein_iot.h
main/: CMakeLists.txt  main.c
src/: freertos_tasks.c  freertos_tasks.h
